[workspace]
members = [".", "examples/client", "examples/webrtc-proxy"]
default-members = ["."]

[package]
name = "retina"
version = "0.4.5"
authors = ["Scott Lamb <slamb@slamb.org>"]
license = "MIT/Apache-2.0"
edition = "2021"
keywords = ["rtsp", "multimedia", "video", "streaming", "ip-camera"]
categories = ["network-programming", "multimedia"]
description = "high-level RTSP multimedia streaming library"
repository = "https://github.com/scottlamb/retina"
include = ["src/**/*", "benches", "Cargo.toml"]
rust-version = "1.64"

[dependencies]
base64 = "0.21"
bitstream-io = "1.7"
bytes = "1.0"
futures = "0.3"
h264-reader = "0.7"
hex = "0.4"
http-auth = "0.1"
log = "0.4"
once_cell = "1.7"
pin-project = "1.0"
pretty-hex = "0.3"
rand = "0.8"
rtsp-types = "0.1"
sdp-types = "0.1"
smallvec = { version = "1.6", features = ["union"] }
thiserror = "1.0"
time = "0.1"
tokio = { version = "1.11", features = ["macros", "net", "rt", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
url = "2.2"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["async_tokio"] }
mylog = { git = "https://github.com/scottlamb/mylog" }
tokio = { version = "1.11", features = [
    "io-util",
    "macros",
    "rt-multi-thread",
    "test-util",
] }

[profile.bench]
debug = true

[[bench]]
name = "client"
harness = false

[[bench]]
name = "depacketize"
harness = false
